Fixes issue #1548 - Use the Stream::toList method